# mlb_bayesian_projections

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  app.py  bash.exe.stackdump  claude.md  pyproject.toml  requirements.txt  swe_plan.md  test_results.txt
autoresearch/: hill_climb.py  prepare.py  train.py
config/: change_safety.yaml  model.yaml
docs/: CODEBASE_MAP.md  SCHEMA_REFERENCE.md  batter_hits_signal_execution_plan.md  change_safety_checklist.md  claude_code_prompt_batter_hits_widening_followup.md  failed_hypotheses.md  model_performance_dashboard_spec.md  outcome.txt  paper_v1_calibrated_game_props.md  recommended_improvements.md  reliability_matrix.md  style_guide.md
notebooks/: batting_eda.csv  young_hitter_eda.py
scripts/: ab_matchup_slopes.py  apply_injury_adjustments.py  backfill_dim_player.py  backtest_form_lift_props.py  backtest_form_lifts.py  backtest_game_props_market_lines.py  backtest_with_weather.py  bootstrap_ci_analysis.py  build_dk_lineups.py  build_hitter_descriptions.py  build_milb_translations.py  build_preseason_injuries.py  bvp_history_research.py  collinearity_audit.py  compare_bf_improvements.py  compare_pitcher_k_samples.py  cross_year_corr.py  diag_re24.py  eval_game_preds.py  eval_h_differentiation.py  fit_batter_h_model.py  fit_game_model.py  fit_matchup_shrinkage.py  fit_pa_model.py  full_eda.py  generate_calibration_baseline.py  generate_preseason_content.py  grade_prior_analysis.py  grade_yoy_stability.py  hitter_injury_eda.py  injury_eda.py  layer2_lift_diagnostic.py  matchup_ceiling_analysis.py  oof_prop_ranking_report.py  overdispersion_analysis.py  overdispersion_extra.py  precompute_dashboard_data.py  (+35 more)
src/data/: db.py  (+15 more)
(+194 files in other folders)
